--- a/GUI/GUI.ui
+++ b/GUI/GUI.ui
@@ -477,6 +477,9 @@
      <string/>
     </property>
    </widget>
+   <zorder>VideoFrame</zorder>
+   <zorder>label</zorder>
+   <zorder>gridLayoutWidget</zorder>
   </widget>
   <widget class="QFrame" name="distortion_controller">
    <property name="geometry">
@@ -653,6 +656,51 @@
        </widget>
       </item>
      </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="gridLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>210</y>
+     <width>211</width>
+     <height>120</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="InputFrame">
+    <item row="0" column="0">
+     <widget class="QLabel" name="input_label">
+      <property name="font">
+       <font>
+        <pointsize>13</pointsize>
+        <italic>true</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>Input Options</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignHCenter|Qt::AlignTop</set>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLineEdit" name="lineEdit"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QCheckBox" name="file_input_check">
+      <property name="text">
+       <string>File Input</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QPushButton" name="file_browse">
+      <property name="text">
+       <string>Browse File</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
